# deproject

./: .gitignore  Cargo.toml  README.md  calib.py  calib.sh  notes.md  record.sh  run.sh
scripts/: calib.py  calib.sh  record.sh  run.sh
src/: array2d.rs  fluid.rs  image.rs  intrinsics.rs  lib.rs  main.rs  pattern.rs  plane.rs  project.rs  projector.rs  realsense.rs
src/shaders/: calib_pattern.frag  fullscreen_tri.vert
