[package]
name = "deproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realsense-rust = "1.1.0"
glow = "0.11.2"
glutin = "0.28"
png = "0.17.6"
anyhow = "1"
bytemuck = "1.12.1"
clap = { version = "3.2.20", features = ["derive"] }

[profile.release]
debug = true
